--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -46,6 +46,12 @@
       </li>
        
     </ul>
+    <h2>
+    <form id="uploadbanner" enctype="multipart/form-data" method="post" action="UploadServlet">
+      <input id="fileupload" name="filename" type="file" />
+      <input type="submit" value="submit" id="submit" />
+   </form>
+   </h2>
   </main>
 </body>
 
